Finished refactoring for use in Seller Portal.

--- a/src/test/resources/shiro.ini
+++ b/src/test/resources/shiro.ini
@@ -9,7 +9,7 @@ hashService.hashIterations = 512
 hashService.hashAlgorithmName = SHA-256
 hashService.generatePublicSalt = true
 # If you wanted to use some private salt bytes... (NOT A BAD IDEA!)
-hashService.privateSalt = himalayan
+# hashService.privateSalt = himalayan
 
 # We use this one to create a new test user with a hashed password.
 passwordService = org.apache.shiro.authc.credential.DefaultPasswordService
