--- a/src/test/resources/shiro.ini
+++ b/src/test/resources/shiro.ini
@@ -8,8 +8,8 @@ hashService = org.apache.shiro.crypto.hash.DefaultHashService
 hashService.hashIterations = 512
 hashService.hashAlgorithmName = SHA-256
 hashService.generatePublicSalt = true
-# If you wanted to use some private salt bytes... (NOT A BAD IDEA!)
-# hashService.privateSalt = himalayan
+# If you wanted to use some private salt bytes, provide in Base64 (NOT A BAD IDEA!)
+# hashService.privateSalt = aGltYWxheWFu
 
 # We use this one to create a new test user with a hashed password.
 passwordService = org.apache.shiro.authc.credential.DefaultPasswordService
