[maven-release-plugin] prepare release shiro-jdbi-realm-0

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <name>Shiro JDBI Realm</name>
@@ -16,12 +14,13 @@
 
     <groupId>io.ifar.shiro-jdbi-realm</groupId>
     <artifactId>shiro-jdbi-realm</artifactId>
-    <version>0-SNAPSHOT</version>
+    <version>0</version>
 
     <scm>
         <url>https://github.com/Multifarious/shiro-jdbi-realm.git</url>
         <developerConnection>scm:git:git@github.com:Multifarious/shiro-jdbi-realm.git</developerConnection>
-    </scm>
+      <tag>shiro-jdbi-realm-0</tag>
+  </scm>
 
     <organization>
         <name>Multifarious, Inc.</name>
